--- a/crud-app/server/package.json
+++ b/crud-app/server/package.json
@@ -12,9 +12,11 @@
     "@genezio/types": "^0.1.9",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.9"
+    "@types/node": "^20.8.9",
+    "@types/pg": "^8.10.7"
   }
 }
