update yaml to fit new yaml config, modfied the way the user class conetcs to postgres

--- a/crud-app/genezio.yaml
+++ b/crud-app/genezio.yaml
@@ -1,8 +1,14 @@
 name: crud-app
 region: us-east-1
 language: ts
-packageManager: npm
 cloudProvider: genezio
+scripts:
+  preBackendDeploy: npm install
+  preFrontendDeploy: npm run install-prod-sdk && npm install && npm run build
+frontend:
+  path: ./client/build
+  subdomain: copper-global-lark
+packageManager: npm
 workspace:
   backend: ./server
   frontend: ./client
